avprotocol: Don't use GST_LOG_OBJECT() and friends on an arbitrary struct that is not a GObject

https://bugzilla.gnome.org/show_bug.cgi?id=775516