ext/libav/gstavprotocol.h
@@ -28,23 +28,23 @@ G_BEGIN_DECLS
 
 /* pipe protocol helpers */
 #define GST_FFMPEG_PIPE_MUTEX_LOCK(m) G_STMT_START {                    \
-  GST_LOG_OBJECT (m, "locking tlock from thread %p", g_thread_self ()); \
+  GST_LOG ("locking tlock from thread %p", g_thread_self ()); \
   g_mutex_lock (&m->tlock);                                              \
-  GST_LOG_OBJECT (m, "locked tlock from thread %p", g_thread_self ());  \
+  GST_LOG ("locked tlock from thread %p", g_thread_self ());  \
 } G_STMT_END
 
 #define GST_FFMPEG_PIPE_MUTEX_UNLOCK(m) G_STMT_START {                    \
-  GST_LOG_OBJECT (m, "unlocking tlock from thread %p", g_thread_self ()); \
+  GST_LOG ("unlocking tlock from thread %p", g_thread_self ()); \
   g_mutex_unlock (&m->tlock);                                              \
 } G_STMT_END
 
 #define GST_FFMPEG_PIPE_WAIT(m) G_STMT_START {                          \
-  GST_LOG_OBJECT (m, "thread %p waiting", g_thread_self ());            \
+  GST_LOG ("thread %p waiting", g_thread_self ());            \
   g_cond_wait (&m->cond, &m->tlock);                                      \
 } G_STMT_END
 
 #define GST_FFMPEG_PIPE_SIGNAL(m) G_STMT_START {                        \
-  GST_LOG_OBJECT (m, "signalling from thread %p", g_thread_self ());    \
+  GST_LOG ("signalling from thread %p", g_thread_self ());    \
   g_cond_signal (&m->cond);                                              \
 } G_STMT_END
 
